--- a/juego/index.html
+++ b/juego/index.html
@@ -16,16 +16,16 @@
 		<h3>Ingrese 4 números del 1 al 9 (sin repetir):</h3>
 		<div class="row">
 			<div class="col-1">
-				<input type="number" min="0" max=9 class="form-control" id="n1">
+				<input type="number" min="0" max="9" class="form-control" id="n1" >
 			</div>
 			<div class="col-1">
-				<input type="number" min="0" max=9 class="form-control" id="n2">
+				<input type="number" min="0" max="9" class="form-control" id="n2">
 			</div>
 			<div class="col-1">
-				<input type="number" min="0" max=9 class="form-control" id="n3">
+				<input type="number" min="0" max="9" class="form-control" id="n3">
 			</div>
 			<div class="col-1">
-				<input type="number" min="0" max=9 class="form-control" id="n4">
+				<input type="number" min="0" max="9" class="form-control" id="n4">
 			</div>
 			<div class="col-3"><button class="btn btn-info" id="aceptar">Aceptar</button></div>
 		</div>
